--- a/app/src/main/res/drawable-anydpi/returnmenu.xml
+++ b/app/src/main/res/drawable-anydpi/returnmenu.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="459"
-    android:viewportHeight="459"
-    android:tint="#FFFFFF"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="240.823"
+    android:viewportHeight="240.823"
+    android:tint="#4A86E8"
     android:alpha="1">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M178.5,140.25v-102L0,216.75l178.5,178.5V290.7c127.5,0 216.75,40.8 280.5,130.05C433.5,293.25 357,165.75 178.5,140.25z"/>
+      android:pathData="M57.633,129.007L165.93,237.268c4.752,4.74 12.451,4.74 17.215,0c4.752,-4.74 4.752,-12.439 0,-17.179l-99.707,-99.671l99.695,-99.671c4.752,-4.74 4.752,-12.439 0,-17.191c-4.752,-4.74 -12.463,-4.74 -17.215,0L57.621,111.816C52.942,116.507 52.942,124.327 57.633,129.007z"/>
 </vector>
