--- a/app/src/main/res/layout/activity_playlist_view.xml
+++ b/app/src/main/res/layout/activity_playlist_view.xml
@@ -7,19 +7,6 @@
     android:background="@drawable/gradientbackground"
     tools:context=".PlaylistView">
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="14dp"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/playlistImageInPlaylistView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </SearchView>
-
     <ImageView
         android:id="@+id/playlistImageInPlaylistView"
         android:layout_width="225dp"
@@ -77,5 +64,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"></LinearLayout>
     </ScrollView>
+
+    <ImageButton
+        android:id="@+id/returnButtonPlaylist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="32dp"
+        android:background="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/returnmenu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
