--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/searchViewBottomBar"
         android:enabled="true"
-        android:icon="@drawable/searchview"
+        android:icon="@drawable/searchselector"
         android:title="SEARCH"
         app:itemIconTint="@drawable/searchselector"
         app:showAsAction="ifRoom" />
