--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/homeButtonBottomBar"
         android:enabled="true"
         android:icon="@drawable/homeselector"
-        android:title="Home"
+        android:title="HOME"
         app:itemIconTint="@drawable/homeselector"
         app:showAsAction="ifRoom" />
     <item
