--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -75,6 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#1C376E"
+        app:itemTextColor="@color/White"
+        app:itemIconTint="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
