--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,7 @@
     android:width="108dp"
     android:viewportHeight="108"
     android:viewportWidth="108"
-    android:backgroundTint="@drawable/gradientbackground"
+    android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#1C3766"
           android:pathData="M0,0h108v108h-108z"/>
