--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,9 +4,8 @@
     android:width="108dp"
     android:viewportHeight="108"
     android:viewportWidth="108"
-    android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#1C3766"
+    <path android:fillColor="#008577"
           android:pathData="M0,0h108v108h-108z"/>
     <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
           android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
