--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:padding="20dp"
-    android:viewportWidth="325"
-    android:viewportHeight="325">
-  <group android:translateY="32.5">
+    android:viewportWidth="193.45238"
+    android:viewportHeight="193.45238">
+  <group android:translateX="-65.77381"
+      android:translateY="-33.27381">
     <path
         android:pathData="M152.5,80.4c-17.2,4.2 -31.5,19.7 -33.2,36.1 -0.5,5.2 -0.9,5.9 -4.3,8 -7.3,4.6 -8,6.4 -8,19.2 0,12.9 1,15.9 6.2,19.1 4.8,2.9 9,3.5 11.3,1.8 1.9,-1.3 2,-2.8 2.2,-22.8 0.2,-24.9 0.5,-28.4 3.4,-34.1 5,-9.8 12.5,-16.1 22.8,-19.1 9.9,-2.9 20,-1.3 29.3,4.6 5.3,3.3 9.3,7.9 12.9,14.8 2.3,4.3 2.4,5.6 2.9,29.8 0.5,23.8 0.6,25.5 2.5,26.8 2.3,1.7 6.5,1.1 11.3,-1.8 5.2,-3.2 6.2,-6.2 6.2,-19.1 0,-12.8 -0.7,-14.6 -8,-19.2 -3.4,-2.1 -3.8,-2.8 -4.3,-8 -0.8,-8.2 -5.6,-17.6 -12.4,-24.4 -11,-10.9 -26.2,-15.3 -40.8,-11.7z"
         android:fillColor="#000000"
