--- a/app/src/main/res/layout/fragment_search_view.xml
+++ b/app/src/main/res/layout/fragment_search_view.xml
@@ -13,6 +13,7 @@
             android:id="@+id/searchViewFragment"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
