--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -34,14 +34,14 @@
             <HorizontalScrollView
                 android:id="@+id/hScrollmyRecentPlaylistID"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <LinearLayout
                     android:id="@+id/linearLayoutplaylistID"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:orientation="horizontal" />
             </HorizontalScrollView>
 
@@ -60,14 +60,14 @@
             <HorizontalScrollView
                 android:id="@+id/hScrollNearestConcertsID"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <LinearLayout
                     android:id="@+id/linearLayoutConcertsID"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:orientation="horizontal" />
             </HorizontalScrollView>
 
@@ -78,7 +78,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:text="My albums"
+                android:text="Recommended albums"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
@@ -86,14 +86,14 @@
             <HorizontalScrollView
                 android:id="@+id/hScrollNewAlbumsID"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <LinearLayout
                     android:id="@+id/linearLayoutAlbumsID"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:orientation="horizontal" />
             </HorizontalScrollView>
 
