--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             android:id="@+id/connexion"
             android:layout_width="100dp"
             android:layout_height="41dp"
-            android:background="#20335E"
+            android:background="@drawable/roundbutton"
             android:text="Log In"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -90,9 +90,9 @@
             android:layout_width="100dp"
             android:layout_height="41dp"
             android:layout_marginStart="13dp"
-            android:background="#20335E"
             android:text="Sign in"
             android:textColor="#FFFFFF"
+            android:background="@drawable/roundbutton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.045"
