--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -137,10 +137,10 @@
         android:layout_width="53dp"
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
-        android:background="#20335E"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/delete"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.684"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fieldForConfirmPassword"
         app:layout_constraintVertical_bias="0.0"
@@ -151,10 +151,12 @@
         android:layout_width="53dp"
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
-        android:background="#20335E"
+        android:layout_marginEnd="80dp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.642"
+        app:layout_constraintEnd_toStartOf="@+id/confirm"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fieldForConfirmPassword"
         app:layout_constraintVertical_bias="0.0"
