--- a/app/src/main/res/drawable/gradientbackground.xml
+++ b/app/src/main/res/drawable/gradientbackground.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#482834" android:endColor="#1C3766" android:angle="270"/>`
+    <gradient android:startColor="@color/StartColor" android:endColor="@color/EndColor" android:angle="270"/>`
 </shape>
