--- a/app/src/main/res/layout/fragment_search_view.xml
+++ b/app/src/main/res/layout/fragment_search_view.xml
@@ -11,8 +11,8 @@
 
         <SearchView
             android:id="@+id/searchViewFragment"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_width="405dp"
+            android:layout_height="65dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
