--- a/app/src/main/res/layout/playlist_pop_up.xml
+++ b/app/src/main/res/layout/playlist_pop_up.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="350dp"
     android:layout_height="350dp"
+    android:id="@+id/backgroundpopUp"
     android:background="@drawable/gradientbackground"
     android:layout_gravity="center">
 
