--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="ButtonBlue">#4A86E8</color>
     <color name="White">#FFFFFF</color>
     <color name="Redlight">#482834</color>
+    <color name="StartColor">#482834</color>
+    <color name="EndColor">#1C3766</color>
 </resources>
